[package]
name = "ckb-testtool"
version = "0.11.0"
authors = ["Nervos Network"]
edition = "2021"
license = "MIT"
description = "CKB contract testing tools"
repository = "https://github.com/nervosnetwork/capsule"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-always-success-script = "0.0.1"
rand = "0.8"
lazy_static = "1.4"

ckb-chain-spec = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-chain-spec"}
ckb-types = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-types"}
ckb-error = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-error"}
ckb-script = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-script"}
ckb-hash = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-hash"}
ckb-jsonrpc-types = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-jsonrpc-types"}
ckb-crypto = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-crypto"}
ckb-resource = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-resource"}
ckb-verification = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-verification"}
ckb-traits = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-traits"}

ckb-mock-tx-types = {git = "https://github.com/nervosnetwork/ckb-standalone-debugger.git",branch = "develop",package="ckb-mock-tx-types"}
